--- a/Src/XboxGamesApi/XboxGamesApi.csproj
+++ b/Src/XboxGamesApi/XboxGamesApi.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\protudos\" />
+  </ItemGroup>
+
 </Project>
